tests/ui/obsolete-in-place/bad.stderr
error: unexpected token: `<-`
  --> $DIR/bad.rs:5:7
   |
LL |     x <- y;
   |       ^^
   |
help: if you meant to write a comparison against a negative value, add a space in between `<` and `-`
   |
LL |     x < - y;
   |        +

error: expected expression, found keyword `in`
  --> $DIR/bad.rs:10:5
   |
LL |     in(foo) { bar };
   |     ^^ expected expression

error: aborting due to 2 previous errors

